@@ -4,50 +4,42 @@ import com.google.common.collect.ImmutableList;
 import io.github.riverbytheocean.mods.riverkeys.keymappings.ModifierKey;
 import io.github.riverbytheocean.mods.riverkeys.keymappings.ServerKey;
 import io.github.riverbytheocean.mods.riverkeys.keymappings.ServerKeys;
-import io.github.riverbytheocean.mods.riverkeys.util.saving.KeyMappingSaving;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.KeyMapping;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.ComponentPath;
 import net.minecraft.client.gui.Font;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.Button;
 import net.minecraft.client.gui.components.ContainerObjectSelectionList;
+import net.minecraft.client.gui.components.FocusableTextWidget;
 import net.minecraft.client.gui.components.Tooltip;
 import net.minecraft.client.gui.components.events.GuiEventListener;
 import net.minecraft.client.gui.narration.NarratableEntry;
-import net.minecraft.client.gui.narration.NarratedElementType;
-import net.minecraft.client.gui.narration.NarrationElementOutput;
-import net.minecraft.client.gui.navigation.FocusNavigationEvent;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
-import org.jetbrains.annotations.Nullable;
+import net.minecraft.resources.ResourceLocation;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
 public class ServerKeyList extends ContainerObjectSelectionList<ServerKeyList.Entry> {
 
-    final ServerKeybindOptions parent;
-
-    final ServerKeybindOptions serverKeybindOptions;
+    private static final int ITEM_HEIGHT = 20;
+    final ServerKeybindOptions keyBindsScreen;
     private int maxNameWidth;
 
     public ServerKeyList(ServerKeybindOptions serverKeybindOptions, Minecraft minecraft) {
         super(minecraft, serverKeybindOptions.width, serverKeybindOptions.layout.getContentHeight(), serverKeybindOptions.layout.getHeaderHeight(), 20);
-        this.serverKeybindOptions = serverKeybindOptions;
-        this.parent = serverKeybindOptions;
-
-        String category = null;
+        this.keyBindsScreen = serverKeybindOptions;
+        KeyMapping.Category category = null;
 
         for (ServerKey serverKey : ServerKeys.getCategorySortedKeybinds()) {
             String keyCat = serverKey.getCategory();
-            if (!keyCat.equals(category)) {
-                category = keyCat;
-                this.addEntry(new CategoryEntry(Component.literal(keyCat)));
+            if (category == null || !keyCat.equals(category.id().getPath())) {
+                category = new KeyMapping.Category(ResourceLocation.fromNamespaceAndPath("serverkeys", keyCat));
+                this.addEntry(new CategoryEntry(category));
             }
 
             Component component = Component.literal(serverKey.getName());
@@ -67,7 +59,7 @@ public class ServerKeyList extends ContainerObjectSelectionList<ServerKeyList.En
     }
 
     public void refreshEntries() {
-        this.children().forEach(ServerKeyList.Entry::refreshEntry);
+        this.children().forEach(Entry::refreshEntry);
     }
 
     public int getRowWidth() {
@@ -75,43 +67,39 @@ public class ServerKeyList extends ContainerObjectSelectionList<ServerKeyList.En
     }
 
     @Environment(EnvType.CLIENT)
-    public class CategoryEntry extends ServerKeyList.Entry {
-        final Component name;
-        private final int width;
+    public abstract static class Entry extends ContainerObjectSelectionList.Entry<ServerKeyList.Entry> {
+        abstract void refreshEntry();
+    }
 
-        public CategoryEntry(final Component component) {
-            this.name = component;
-            this.width = ServerKeyList.this.minecraft.font.width(this.name);
+    @Environment(EnvType.CLIENT)
+    public class CategoryEntry extends Entry {
+        private final FocusableTextWidget categoryName;
+
+        public CategoryEntry(final KeyMapping.Category category) {
+            this.categoryName = new FocusableTextWidget(
+                    ServerKeyList.this.getRowWidth(),
+                    category.label(),
+                    ServerKeyList.this.minecraft.font,
+                    false,
+                    FocusableTextWidget.BackgroundFill.ON_FOCUS, 4
+            );
         }
 
-        public void render(GuiGraphics guiGraphics, int i, int j, int k, int l, int m, int n, int o, boolean bl, float f) {
-            Font var10001 = ServerKeyList.this.minecraft.font;
-            Component var10002 = this.name;
-            int var10003 = ServerKeyList.this.width / 2 - this.width / 2;
-            int var10004 = j + m;
+        public void renderContent(GuiGraphics guiGraphics, int i, int j, boolean bl, float f) {
+            FocusableTextWidget var10000 = this.categoryName;
+            int var10001 = ServerKeyList.this.width / 2 - this.categoryName.getWidth() / 2;
+            int var10002 = this.getContentBottom();
             Objects.requireNonNull(ServerKeyList.this.minecraft.font);
-            guiGraphics.drawString(var10001, var10002, var10003, var10004 - 9 - 1, -1, false);
-        }
-
-        @Nullable
-        public ComponentPath nextFocusPath(FocusNavigationEvent focusNavigationEvent) {
-            return null;
+            var10000.setPosition(var10001, var10002 - 9 - 1);
+            this.categoryName.render(guiGraphics, i, j, f);
         }
 
         public List<? extends GuiEventListener> children() {
-            return Collections.emptyList();
+            return List.of(this.categoryName);
         }
 
         public List<? extends NarratableEntry> narratables() {
-            return ImmutableList.of(new NarratableEntry() {
-                public NarratableEntry.NarrationPriority narrationPriority() {
-                    return NarrationPriority.HOVERED;
-                }
-
-                public void updateNarration(NarrationElementOutput narrationElementOutput) {
-                    narrationElementOutput.add(NarratedElementType.TITLE, ServerKeyList.CategoryEntry.this.name);
-                }
-            });
+            return List.of(this.categoryName);
         }
 
         protected void refreshEntry() {
@@ -119,48 +107,46 @@ public class ServerKeyList extends ContainerObjectSelectionList<ServerKeyList.En
     }
 
     @Environment(EnvType.CLIENT)
-    public class KeyEntry extends ServerKeyList.Entry {
+    public class KeyEntry extends Entry {
         private static final Component RESET_BUTTON_TITLE = Component.translatable("controls.reset");
-        private final ServerKey serverKey;
-        private final Component component;
+        private static final int PADDING = 10;
+        private final ServerKey key;
+        private final Component name;
         private final Button changeButton;
         private final Button resetButton;
         private boolean hasCollision = false;
 
-        KeyEntry(final ServerKey serverKey, final Component component) {
-            this.serverKey = serverKey;
-            this.component = component;
-
-            this.changeButton = Button.builder(component, (button) -> {
-                ServerKeyList.this.serverKeybindOptions.selectedKey = serverKey;
+        KeyEntry(final ServerKey key, final Component name) {
+            this.key = key;
+            this.name = name;
+            this.changeButton = Button.builder(name, (button) -> {
+                ServerKeyList.this.keyBindsScreen.selectedKey = key;
                 ServerKeyList.this.resetMappingAndUpdateButtons();
-            }).bounds(0, 0, 75, 20).createNarration((supplier) -> serverKey.isUnbound() ? Component.translatable("narrator.controls.unbound", component) : Component.translatable("narrator.controls.bound", new Object[]{component, supplier.get()})).build();
-
+            }).bounds(0, 0, 75, 20).createNarration((supplier) -> key.isUnbound() ? Component.translatable("narrator.controls.unbound", new Object[]{name}) : Component.translatable("narrator.controls.bound", new Object[]{name, supplier.get()})).build();
             this.resetButton = Button.builder(RESET_BUTTON_TITLE, (button) -> {
-                serverKey.setBoundKey(serverKey.getKeyCode(), false);
-                serverKey.resetBoundModifiers();
-                KeyMappingSaving.save();
+                key.setBoundKey(key.getKeyCode(), true);
                 ServerKeyList.this.resetMappingAndUpdateButtons();
-            }).bounds(0, 0, 50, 20).createNarration(supplier -> Component.translatable("narrator.controls.reset", component)).build();
-
+            }).bounds(0, 0, 50, 20).createNarration((supplier) -> Component.translatable("narrator.controls.reset", new Object[]{name})).build();
             this.refreshEntry();
         }
 
-        public void render(GuiGraphics guiGraphics, int i, int j, int k, int l, int m, int n, int o, boolean bl, float f) {
-            int p = ServerKeyList.this.scrollBarX() - this.resetButton.getWidth() - 10;
-            int q = j - 2;
-            this.resetButton.setPosition(p, q);
-            this.resetButton.render(guiGraphics, n, o, f);
-            int r = p - 5 - this.changeButton.getWidth();
-            this.changeButton.setPosition(r, q);
-            this.changeButton.render(guiGraphics, n, o, f);
+        public void renderContent(GuiGraphics guiGraphics, int i, int j, boolean bl, float f) {
+            int k = ServerKeyList.this.scrollBarX() - this.resetButton.getWidth() - 10;
+            int l = this.getContentY() - 2;
+            this.resetButton.setPosition(k, l);
+            this.resetButton.render(guiGraphics, i, j, f);
+            int m = k - 5 - this.changeButton.getWidth();
+            this.changeButton.setPosition(m, l);
+            this.changeButton.render(guiGraphics, i, j, f);
             Font var10001 = ServerKeyList.this.minecraft.font;
-            int var10004 = j + m / 2;
+            Component var10002 = this.name;
+            int var10003 = this.getContentX();
+            int var10004 = this.getContentYMiddle();
             Objects.requireNonNull(ServerKeyList.this.minecraft.font);
-            guiGraphics.drawString(var10001, this.component, k, var10004 - 9 / 2, -1);
+            guiGraphics.drawString(var10001, var10002, var10003, var10004 - 9 / 2, -1);
             if (this.hasCollision) {
-                int t = this.changeButton.getX() - 6;
-                guiGraphics.fill(t, j - 1, t + 3, j + m, -65536);
+                int o = this.changeButton.getX() - 6;
+                guiGraphics.fill(o, this.getContentY() - 1, o + 3, this.getContentBottom(), -256);
             }
 
         }
@@ -175,19 +161,19 @@ public class ServerKeyList extends ContainerObjectSelectionList<ServerKeyList.En
 
         protected void refreshEntry() {
             MutableComponent message = Component.empty();
-            for (ModifierKey modifier : this.serverKey.getBoundModifiers()) {
+            for (ModifierKey modifier : this.key.getBoundModifiers()) {
                 message.append(Component.translatable(modifier.getTranslationKey()));
                 message.append(Component.literal(" + "));
             }
-            message.append(this.serverKey.getBoundKeyCode().getDisplayName());
+            message.append(this.key.getBoundKeyCode().getDisplayName());
             this.changeButton.setMessage(message);
-            this.resetButton.active = this.serverKey.hasChanged();
+            //this.changeButton.setMessage(this.key.getTranslatedKeyMessage());
+            this.resetButton.active = !this.key.isDefault();
             this.hasCollision = false;
             MutableComponent mutableComponent = Component.empty();
-            if (!this.serverKey.isUnbound()) {
-
+            if (!this.key.isUnbound()) {
                 for(KeyMapping keyMapping : ServerKeyList.this.minecraft.options.keyMappings) {
-                    if (keyMapping.getDefaultKey().getName().equals(this.serverKey.getName())) {
+                    if (keyMapping.getDefaultKey() != this.key.getKeyCode() && this.key.same(keyMapping) && (!keyMapping.isDefault() || !this.key.isDefault())) {
                         if (this.hasCollision) {
                             mutableComponent.append(", ");
                         }
@@ -198,37 +184,33 @@ public class ServerKeyList extends ContainerObjectSelectionList<ServerKeyList.En
                 }
 
                 for (ServerKey key : ServerKeys.getKeybinds()) {
-                    if (!key.equals(serverKey) && key.getBoundKeyCode().equals(serverKey.getBoundKeyCode())) {
-                        if (key.testModifiers(serverKey.getBoundModifiers())) {
+                    if (!key.equals(this.key) && key.getBoundKeyCode().equals(this.key.getBoundKeyCode())) {
+                        if (key.testModifiers(this.key.getBoundModifiers())) {
                             this.hasCollision = true;
                             break;
                         }
                     }
                 }
-
             }
 
             if (this.hasCollision) {
-                this.changeButton.setMessage(Component.literal("[ ").append(this.changeButton.getMessage().copy().withStyle(ChatFormatting.WHITE)).append(" ]").withStyle(ChatFormatting.RED));
-                this.changeButton.setTooltip(Tooltip.create(Component.translatable("controls.keybinds.duplicateKeybinds", new Object[]{mutableComponent})));
+                this.changeButton
+                        .setMessage(Component.literal("[ ")
+                                .append(this.changeButton.getMessage().copy().withStyle(ChatFormatting.WHITE))
+                                .append(" ]").withStyle(ChatFormatting.YELLOW));
+                this.changeButton.setTooltip(Tooltip.create(Component.translatable("controls.keybinds.duplicateKeybinds", mutableComponent)));
             } else {
-                this.changeButton.setTooltip((Tooltip)null);
+                this.changeButton.setTooltip(null);
             }
 
-            if (ServerKeyList.this.serverKeybindOptions.selectedKey == this.serverKey) {
-                this.changeButton.setMessage(Component.literal("> ").append(this.changeButton.getMessage().copy().withStyle(ChatFormatting.WHITE, ChatFormatting.UNDERLINE)).append(" <").withStyle(ChatFormatting.YELLOW));
+            if (ServerKeyList.this.keyBindsScreen.selectedKey == this.key) {
+                this.changeButton
+                        .setMessage(Component.literal("> ")
+                                .append(this.changeButton.getMessage().copy().withStyle(ChatFormatting.WHITE, ChatFormatting.UNDERLINE))
+                                .append(" <").withStyle(ChatFormatting.YELLOW));
             }
 
         }
     }
-
-    @Environment(EnvType.CLIENT)
-    public abstract static class Entry extends ContainerObjectSelectionList.Entry<ServerKeyList.Entry> {
-        public Entry() {
-        }
-
-        abstract void refreshEntry();
-    }
-
 
 }
